@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [Ncat][GH#1868] Fix a fatal error when connecting to a Linux VM socket with
+  verbose output enabled. [Stefano Garzarella]
+
 o [NSE][GH#1723] Fixed a crash on Windows when processing a GZIP-encoded HTTP
   body. [Daniel Miller]
 
